# ptolemy

./: README.md  cabal.project
ptolemy/: ptolemy.cabal
ptolemy-bridge/: ptolemy-bridge.cabal
ptolemy-bridge/Text/Ptolemy/: Pandoc.hs
ptolemy-core/: ptolemy-core.cabal
ptolemy-core/Text/Ptolemy/: Core.hs
ptolemy-reader-markdown/: ptolemy-reader-markdown.cabal
ptolemy-reader-slackdown/: README.md  ptolemy-reader-slackdown.cabal
ptolemy-reader-slackdown/Text/Ptolemy/Slackdown/: Reader.hs
ptolemy-writer-html/: ptolemy-writer-html.cabal
ptolemy-writer-html/Text/Ptolemy/HTML/: Writer.hs
