name:             ptolemy-reader-slackdown
version:          0.1.0.0
-- synopsis:
-- description
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter
maintainer:       gettyritter@gmail.com
copyright:        ©2016 Getty Ritter
category:         Text
build-type:       Simple
cabal-version:    >=1.12

library
  exposed-modules:     Text.Ptolemy.Slackdown.Reader
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.9,
                       text,
                       megaparsec,
                       vector,
                       ptolemy-core ==0.1.0.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
