name:             ptolemy
version:          0.1.0.0
-- synopsis:
-- description
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter
maintainer:       gettyritter@gmail.com
copyright:        ©2016 Getty Ritter
category: Text
build-type:       Simple
cabal-version:    >=1.0

library
--  exposed-modules:
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.9
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
